Fixed code box (<pre>) overflow issue

--- a/chrome.css
+++ b/chrome.css
@@ -19,6 +19,7 @@ pre {
 	background: #000;
 	color: #0f0 !important;
 	border-radius: 10px;
+	overflow: auto;
 }
 
 pre font {
@@ -65,7 +66,7 @@ img[src="../GrLine.gif"], img[src="../GreenDot.gif"], img[src="../ChromeBall.gif
 
 dd, dt {
 	display: list-item;
-	list-style-type: disc;   
+	list-style-type: disc;
 }
 
 a {
